---
title: V-SPORT ERD - Gửi xe & Tiện ích
---
erDiagram
  TheGiuXe {
    INT TheID PK "NOT NULL"
    INT CoSoID "NOT NULL"
    VARCHAR(20) MaSoThe "NOT NULL"
    NVARCHAR(20) LoaiXe
    NVARCHAR(20) TrangThai
    INT SucChua
    DECIMAL(18,2) GiaVeTheoLuot
  }
  LichXeRaVao {
    INT LichXeID PK "NOT NULL"
    INT TheID
    INT DatSanID
    VARCHAR(20) BienSoXe
    NVARCHAR(20) KieuGuiXe
    DATETIME GioVao
    DATETIME GioRa
    DECIMAL(18,2) PhiGuiXe
    INT AccountID_NhanVien
  }
  LichDatSan ||--o{ LichXeRaVao : "DatSanID"
  Accounts ||--o{ LichXeRaVao : "AccountID_NhanVien"
  TheGiuXe ||--o{ LichXeRaVao : "TheID"
  CoSo ||--o{ TheGiuXe : "CoSoID"
